# partcad

./: .bumpversion.cfg  .bumpversion.toml  .flake8  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  tox.ini  version.sh
.github/: FUNDING.yml
.github/workflows/: python-app.yml  python-build.yml  python-deploy.yml  python-test.yml  version-bump.yml
docs/: index.rst  requirements.txt
docs/source/: assy.rst  conf.py  configuration.rst  contributing.rst  design.rst  design_parallelism.rst  features.rst  implementation_details.rst  index.rst  installation.rst  intro.rst  troubleshooting.rst  tutorial.rst  use_cases.rst
examples/: README.md  partcad.yaml  render_all_examples.sh
examples/assembly_assy/: logo.assy  logo_embedded.assy  partcad.yaml  primitive.assy
examples/assembly_logo/: logo.py  partcad.yaml
examples/assembly_primitive/: assembly.py  partcad.yaml
examples/consume_build123d/: basic.py
examples/consume_cadquery/: basic.py
examples/consume_standalone/: README.md  example.py  partcad.yaml
examples/feature_enrich/: desk-enrich.assy  desk-no-enrich.assy  partcad.yaml
examples/feature_export/: .gitignore  bolt.step  partcad.yaml
examples/feature_interface/: README.md  connect-interfaces.assy  connect-mates.assy  connect-ports.assy  example-bracket.step  example-motor.step  partcad.yaml  socket-head-m3-screw-6mm.step  socket-head-m4-screw-6mm.step
examples/feature_monorepo/: partcad.yaml
examples/part_3mf/: cube.3mf  partcad.yaml
examples/part_build123d_primitive/: cube.py  partcad.yaml  requirements.txt
examples/part_cadquery_logo/: bone.py  head_half.py  partcad.yaml  requirements.txt
examples/part_cadquery_primitive/: cube.py  cylinder.py  partcad.yaml
examples/part_scad/: cube.scad  partcad.yaml
examples/part_step/: partcad.yaml
examples/part_stl/: partcad.yaml
examples/produce_assembly_assy/: .gitignore  README.md  logo.assy  logo_embedded.assy  partcad.yaml  primitive.assy
examples/produce_part_3mf/: README.md  partcad.yaml
examples/produce_part_ai_build123d/: README.md  cube.py  partcad.yaml  prism.py  tetrahedron.py
examples/produce_part_ai_cadquery/: README.md  cube.py  partcad.yaml  prism.py  tetrahedron.py
examples/produce_part_ai_openscad/: README.md  cube.scad  partcad.yaml  prism.scad  tetrahedron.scad
examples/produce_part_build123d_primitive/: README.md  partcad.yaml
examples/produce_part_cadquery_logo/: README.md  head_half.py  partcad.yaml
examples/produce_part_cadquery_primitive/: .gitignore  README.md  cube.py  partcad.yaml
examples/produce_part_extrude/: README.md  partcad.yaml
examples/produce_part_openscad/: README.md  partcad.yaml
examples/produce_part_step/: .gitignore  README.md  bolt.step  partcad.yaml
examples/produce_part_stl/: README.md  cube.stl  partcad.yaml
examples/produce_sketch_basic/: README.md  partcad.yaml
examples/produce_sketch_build123d/: README.md  partcad.yaml
examples/produce_sketch_cadquery/: README.md  partcad.yaml  sketch.py
examples/produce_sketch_dxf/: README.md  dxf_01.dxf  partcad.yaml
examples/produce_sketch_svg/: README.md  partcad.yaml
examples/provider_manufacturer/: README.md  gcodeWriter.py  partcad.yaml
examples/provider_manufacturing/: README.md  gcodeWriter.py  partcad.yaml
examples/provider_store/: README.md  csvFile.py  partcad.yaml  stock.csv
partcad/: README.md  __init__.py  pyproject.toml  requirements.txt
partcad-cli/: pyproject.toml  requirements.txt
partcad-cli/src/partcad_cli/: __init__.py  cli.py  cli_add.py  cli_info.py  cli_init.py  cli_inspect.py  cli_install.py  cli_list.py  cli_render.py  cli_show.py  cli_status.py  cli_supply_caps.py  cli_supply_find.py  cli_supply_order.py  cli_supply_quote.py  cli_test.py
partcad-cli/src/partcad_cli/template/: init-public.yaml
partcad/src/partcad/: __init__.py  ai.py  ai_google.py  ai_ollama.py  ai_openai.py  assembly.py  assembly_config.py  assembly_factory.py  assembly_factory_alias.py  assembly_factory_assy.py  assembly_factory_file.py  consts.py  context.py  exception.py  factory.py  file_factory.py  file_factory_url.py  geom.py  globals.py  interface.py  interface_inherit.py  logging.py  logging_ansi_terminal.py  mating.py  part.py  part_config.py  part_factory.py  part_factory_3mf.py  part_factory_ai_build123d.py  part_factory_ai_cadquery.py  part_factory_ai_openscad.py  part_factory_alias.py  part_factory_build123d.py  part_factory_cadquery.py  part_factory_enrich.py  part_factory_extrude.py  part_factory_feature_ai.py  part_factory_file.py  part_factory_python.py  part_factory_scad.py  (+55 more)
partcad/src/partcad/wrappers/: cq_serialize.py  wrapper_build123d.py  wrapper_cadquery.py  wrapper_common.py  wrapper_provider.py  wrapper_render_obj.py  wrapper_render_svg.py  wrapper_step.py
partcad/src/partcad/wrappers/py_stubs/: ocp_vscode.py
partcad/tests/: partcad-examples.yaml  partcad.yaml
partcad/tests/unit/: test_assembly.py  test_assembly_alias.py  test_context.py  test_file.py  test_part.py  test_part_alias.py  test_part_enrich.py  test_part_params.py  test_project.py  test_project_config.py  test_provider.py  test_render.py  test_runtime_python.py
partcad/tests/unit/data/: project_config_include.yaml  project_config_template.yaml  project_config_valid_1.yaml
partcad/tests/unit/data/subdir/: include.j2
src/partcad/: __init__.py  assembly.py  assembly_factory.py  assembly_factory_assy.py  assembly_factory_python.py  cli.py  cli_add.py  cli_init.py  cli_install.py  cli_list.py  cli_render.py  cli_show.py  context.py  part.py  part_factory.py  part_factory_build123d.py  part_factory_cadquery.py  (+15 more)
tests/: partcad-examples.yaml
(+18 files in other folders)
