[project]
name = "partcad"
description = "Framework for packaging CAD models"
readme = "README.md"
keywords = ["cadquery", "build123d"]
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Roman Kuzmenko", email = "openvmp@proton.me" }
]
maintainers = [
  {name = "Roman Kuzmenko", email = "openvmp@proton.me" }
]
dynamic = ["version", "dependencies"]

[project.scripts]
pc = "partcad:main_cli"

[tool.setuptools.package-data]
"partcad.template" = ["*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "partcad.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
# addopts = -ra -s -rx
pythonpath = "src"

[tool.bumpversion]
current_version = "0.1.1"

[[tool.bumpversion.files]]
filename = "src/partcad/__init__.py"
