[project]
name = "partcad"
description = "Framework for packaging CAD models"
readme = "README.md"
keywords = ["cadquery", "build123d"]
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Roman Kuzmenko", email = "openvmp@proton.me" }
]
maintainers = [
  {name = "Roman Kuzmenko", email = "openvmp@proton.me" }
]
dynamic = ["version", "dependencies"]

[project.scripts]
pc = "partcad:main_cli"

[tool.setuptools.package-data]
"partcad.template" = ["*.yaml"]
"partcad.wrappers" = ["*.py"]

[tool.setuptools.dynamic]
version = {attr = "partcad.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
# addopts = -ra -s -rx
pythonpath = "src"

[tool.bumpversion]
current_version = "0.2.9"
commit = "true"
commit_args = "--no-verify"
tag = "true"
tag_name = "{new_version}"
message = "Version updated from {current_version} to {new_version}"

[[tool.bumpversion.files]]
filename = "src/partcad/__init__.py"
