[project]
name = "partcad-cli"
version = "0.5.20"
description = "Command-line interface to PartCAD"
readme = "README.md"
keywords = ["cadquery", "build123d", "cad", "design", "openscad", "step", "stl"]
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Roman Kuzmenko", email = "openvmp@proton.me" }
]
maintainers = [
  {name = "Roman Kuzmenko", email = "openvmp@proton.me" }
]
dynamic = ["dependencies"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.setuptools.package-data]
"partcad_cli.template" = ["*.yaml"]

[project.scripts]
pc = "partcad_cli:main_cli"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/openvmp/partcad"
Issues = "https://github.com/openvmp/partcad/issues"
